# Parallel-MLIR

mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/Tapir/: CMakeLists.txt  TapirDialect.h  TapirOps.td
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Tapir/: CMakeLists.txt  TapirOps.cpp
mlir/lib/Dialect/Tapir/IR/: TapirDialect.cpp
mlir/test/Dialect/Tapir/: ops.mlir
mlir/tools/mlir-opt/: CMakeLists.txt
